kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pki-certs
spec:
  type: NodePort
  selector:
    app: pki-certs
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
